Jann 30/objects/RFA_COA_Group__c.object
<CustomObject>
    <description>RFA object which is used for determining the automated list of approvers.</description>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Currency__c</fullName>
        <label>Currency</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>DOA_Category__c</fullName>
        <label>DOA Category</label>
        <picklist>
            <picklistValues>
                <fullName>1.A.1 Capital Expenditures - Annual Capital Plan Request or Formal Approval of Annual Capital Plan Request</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.2.a Capital Expenditures - Unbudgeted CPR or SPR Covered by Budget Shift</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.2.b Capital Expenditures - Unbudgeted CPR or SPR Funded Partially or Fully from Corporate Reserve</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.3 Capital Expenditures - Increase or Scope Change to Previously Approved CPR or SPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.4 Capital Expenditures - Transfer of Capital Budget across Groups for a Previously Approved CPR or SPR</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.5 Capital Expenditures - Foreign Exchange Fluctuation</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.A.8 Capital Expenditures - Advance Appropriations</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.B Capital Expenditures - Capability and Performance Programs (CAPPrs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>1.C Capital Expenditures - Bottles and Cases, Including Overages</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2. IT Investments and Website Presence</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.A Real Property - Acquisitions and Sales or Other Disposals of Real Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.B Real Property - Donations of Real Property</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3.C Real Property - Condemnations or Easements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.A Leases - Operating Leases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>4.B Leases - Capital Leases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.A Inventory Adjustments and Disposals</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.B Other Asset Impairments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.C Asset Transfers</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>5.D Asset Disposals (Tangible Assets excluding Real Property and Inventory)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.A Treasury - Banking Information Reports (BIR)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.B Treasury - External Borrowings and Lines of Credit (RFFs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.C Treasury - Intercompany Loans</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.D Treasury - Loans Third Parties (Including CCFC Target Loan Programs)</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.E.1 Treasury - Guarantees to Third Parties - General</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.E.2 Treasury - Guarantees Related to Tax Disputes or Other Matters Involving Governmental Bodies</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.F Treasury - Comfort Letters and Other Financial Security Instruments</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.G Treasury - Accommodation Purchases</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.H Treasury - Credit Terms/Policies or Incentives for Sales to Customers, Bottlers or Distributors</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.I.1 Treasury - Exemption from Bad Debt Reserve Requirements</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>6.I.2 Treasury - Write-offs of Uncollectible Accounts Receivable from Bad Debt Reserve</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Group__c</fullName>
        <label>Group #</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>TrimmedDOACategory__c</fullName>
        <formula>substitute(TEXT(DOA_Category__c ),&apos; &apos;,&apos;&apos;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>TrimmedDOACategory</label>
        <type>Text</type>
    </fields>
    <label>RFA COA Group old</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Group__c</columns>
        <columns>Currency__c</columns>
        <columns>DOA_Category__c</columns>
        <columns>Amount__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>RFA COA Group Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>RFA COA Groups old</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>